--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,7 @@
 /*Media query to stop the nav bar overflowing on screens larger than 1399px wide*/
 @media (min-width: 1400px) {
     #t-nav {
-        max-width: 1320px; /* Adjust the value as needed */
-        /* Other styles for #t-nav */
+        max-width: 1320px;
     }
 }
 html {
